--- a/src/style/main.scss
+++ b/src/style/main.scss
@@ -1,6 +1,9 @@
 @import url("https://fonts.googleapis.com/css2?family=Kanit:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap");
-$w-red: #ed1e79;
-
+$w-pink: #ed1e79;
+$w-black: #000000;
+$w-red: #ff6347;
+$w-white: #f6e8ea;
+$w-blue: #1c77c3;
 // color set
 // pink = #ED1E79
 // black = #000000
@@ -22,7 +25,9 @@ mobile {
     // height: 736px;
     // box-shadow: 0px 12px 24px #0004;
 }
-
+.func-link{
+    cursor: pointer;
+}
 .container {
     background: white;
 }
@@ -63,10 +68,10 @@ h3 {
     margin-top: 0.5em;
 }
 .name-hilight {
-    color: $w-red;
+    color: $w-pink;
 }
 .event-wrapper {
-    margin: 0 10%;
+    // margin: 0 10%;
     .title {
         margin-bottom: -2%;
     }
@@ -96,6 +101,9 @@ h3 {
 
 .events-detail {
     max-width: 550px;
+    .columns {
+        margin: 0;
+    }
 }
 
 .events-detail li {
@@ -196,31 +204,32 @@ h3 {
     margin-bottom: 5%;
 }
 .current {
-    color: $w-red !important;
+    color: $w-pink !important;
     transition: border-bottom 0.5s ease;
 }
 a {
     text-decoration: black !important;
 }
 a:active {
-    color: $w-red !important;
+    color: $w-pink !important;
 }
 .navbar {
-    a {
+    #nav-logo {
+        transform: scale(0.8) translateX(-1.2em);
     }
-}
-@media only screen and (max-width: 600px) {
-    .navbar-item {
-        padding: 0.5rem 1rem !important;
+    @media only screen and (max-width: 600px) {
+        #logo-container {
+            padding: 0.5rem 0 !important;
+        }
     }
 }
 .navbar-item {
     @media only screen and (max-width: 600px) {
-        padding: 0.5rem 0;
+        padding: 0.5rem 1rem;
     }
     &:hover {
         background: none !important;
-        color: $w-red !important;
+        color: $w-pink !important;
     }
     img {
         max-height: 2.4rem;
@@ -236,4 +245,10 @@ a:active {
     .is-checkbox {
         transform: scale(1.5) translateX(4px);
     }
+}
+
+.delete-icon {
+    font-size: 1.5em;
+    color: $w-red !important;
+    text-align: right;
 }
