implement some permission

--- a/src/style/main.scss
+++ b/src/style/main.scss
@@ -270,3 +270,16 @@ a:active {
 .text-centered{
     text-align: center;
 }
+
+#find-event{
+    @media only screen and (min-width: 600px) {
+        padding: 3% 20% 0 20%;
+    }
+}
+
+#username{
+    color: $w-red;
+    &:hover{
+        color: $w-red !important;
+    }
+}
